fix: scrollbar and logo disappeared (#44)
* fix(go3564761155): unthemed in-app titlebar (#22)

* fix: bring scrollbar and logo back

* fix: actually bring back logo

--- a/src/mocha.css
+++ b/src/mocha.css
@@ -31,10 +31,7 @@ html:not(.style-scope)
 
   --unthemed-yet: inherit !important;
 
-  --ytmusic-scrollbar-width: 0px !important;
-  --ytd-scrollbar-width: 0px !important;
   --yt-spec-commerce-filled-hover: var(--ctp-accent) !important;
-  scrollbar-width: none !important;
 }
 
 i.material-icons
@@ -55,11 +52,6 @@ body
 ytmusic-nav-bar
 {
   background: var(--ctp-mantle) !important;
-}
-
-.yt-simple-endpoint[aria-label="Home"]
-{
-  visibility:hidden !important;
 }
 
 ytmusic-pivot-bar-item-renderer:hover, ytmusic-pivot-bar-item-renderer.iron-selected
